--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/signUp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <EditText
@@ -64,16 +65,16 @@
                 android:padding="@dimen/activity_vertical_margin_medium" />
 
             <EditText
-                android:id="@+id/etSignUpEmail"
+                android:id="@+id/et_Age"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/activity_vertical_margin_medium"
                 android:autofillHints=""
+                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                 android:background="@drawable/edit_text_boarder"
-                android:drawableStart="@drawable/ic_email_black_24dp"
                 android:drawablePadding="@dimen/activity_vertical_margin_medium"
-                android:hint="@string/emailHint"
-                android:inputType="textEmailAddress"
+                android:hint="@string/age"
+                android:inputType="number"
                 android:padding="@dimen/activity_vertical_margin_medium" />
 
             <EditText
