--- a/app/src/main/res/layout/activity_todo_test.xml
+++ b/app/src/main/res/layout/activity_todo_test.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/editTextParentLinearLayout"
                 android:gravity="center"
                 android:layout_weight=".5"
+
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
 
@@ -32,6 +33,9 @@
                     android:id="@+id/toDoCustomTextInput"
                     android:gravity="center"
                     android:layout_width="match_parent"
+                    android:textColorHint="@color/black"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_height="wrap_content"
                     >
                     <EditText
