--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -2,25 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layoutDirection="rtl"
     android:textDirection="rtl"
     android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="تطبيق التوعية الصحية"
-        android:textStyle="bold"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:layout_marginStart="16dp"
-        >
 
-    </TextView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
@@ -35,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_weight="1"
+        android:layout_gravity="center"
         style="@style/TextAppearance.Compat.Notification.Title"
         android:text="تنبيه دواء  تنبيه دواء تنبيه دواء تنبيه دواء تنبيه دواء تنبيه دواء تنبيه دواء تنبيه دوا" />
 
-</LinearLayout>
 </LinearLayout>
