--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,11 +8,11 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_setting"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_gallery" />
 
+        <item
+            android:id="@+id/nav_Medicine_list"
+            android:icon="@drawable/ic_free_medicine"
+            android:title="@string/Medicine_list" />
 
     </group>
 
@@ -25,7 +25,7 @@
             <item
                 android:id="@+id/nav_aboutapp"
                 android:icon="@drawable/ic_info_black"
-                android:title="@string/abouappp" />
+                android:title="@string/menu_about" />
 
         </menu>
     </item>
