--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -105,7 +105,7 @@
                 android:background="@drawable/edit_text_boarder"
                 android:drawableStart="@drawable/ic_vpn"
                 android:drawablePadding="@dimen/activity_vertical_margin_medium"
-                android:hint="@string/passwordHint"
+                android:hint="@string/passwordHintnew"
                 android:gravity="end"
 
                 android:inputType="textPassword"
@@ -119,7 +119,7 @@
                 android:background="@drawable/edit_text_boarder"
                 android:drawableStart="@drawable/ic_vpn"
                 android:drawablePadding="@dimen/activity_vertical_margin_medium"
-                android:hint="@string/confirmPasswordHint"
+                android:hint="@string/confirmPasswordnew"
                 android:gravity="end"
                 android:inputType="textPassword"
                 android:padding="@dimen/activity_vertical_margin_medium"
