--- a/app/src/main/res/layout/fragment_medicines_list_fragment.xml
+++ b/app/src/main/res/layout/fragment_medicines_list_fragment.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent">
-
+    
     <!--<include layout="@layout/base_toolbar"/>-->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/myCoordinatorLayout"
@@ -21,9 +21,9 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:src="@drawable/empty_view_bg"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
+                android:src="@drawable/ic_free_medicine"
+                android:layout_width="120dp"
+                android:layout_height="120dp" />
             <TextView
                 android:text="@string/no_medicine"
                 android:textColor="@color/secondary_text"
